# parallel-programming

jpeg/gpujpeg-independent/: .cproject  .project  GPATH  GRTAGS  GTAGS  Makefile  gakuryoku600x338.raw  gpujpeg_common.c
jpeg/jpeg-9/: GPATH  GRTAGS  GTAGS  Makefile  cjpeg  config.status  djpeg  jpegtran  libtool  rdjpgcom  wrjpgcom
jpeg/jpeg-comp-modified-load_block_16_8/: jpge.cpp.104r.expand  tga2jpg.cpp.104r.expand
jpeg/jpeg-compressor-read-only/: .stb_image.c.swp  GPATH  GRTAGS  GTAGS  Makefile  jpge.cpp  jpge.cpp.104r.expand  jpge.cpp.128r.expand  jpge.h  tga2jpg  tga2jpg.cpp  tga2jpg.cpp.128r.expand  timer.cpp.104r.expand  timer.cpp.128r.expand
jpeg/jpeg-origin/: jpeg-enc  main.cpp  myKernel.cl
jpeg/temp/: Makefile  call.dot  jpgd.cpp  jpge.cpp  jpge.cpp.128r.expand  tga2jpg  tga2jpg.cpp.128r.expand  timer.cpp  timer.cpp.128r.expand
matmul/: Makefile
matmul/include/: util.h
matmul/src/: main.c  naive.c  util.c  ver1.c  ver2.c  ver3.c  ver4.c
opencl/BSplineScattered/BSplineControl/: CMakeLists.txt  Makefile  itkBSplineControlPointImageFilterTest.cxx
opencl/BSplineScattered/BSplineControl/test/: itkBSplineControlPointImageFilterTest.cxx
opencl/BSplineScattered/test/: CMakeLists.txt  itkBSplineScatteredDataPointSetToImageFilterTest.cxx
opencl/_blur/: blur.cl  main  main.cpp
opencl/bak_10020100/: itkBSplineScatteredDataPointSetToImageFilterOrig.hxx  itkBSplineScatteredDataPointSetToImageFilterTest.cxx
opencl/bak_10020100/phiLattice/ref/: CMakeLists.txt  Makefile  itkBSplineScatteredDataPointSetToImageFilterTest.cxx
opencl/bak_10020100_bak/: Makefile  itkBSplineScatteredDataPointSetToImageFilterOrig.h  itkBSplineScatteredDataPointSetToImageFilterOrig.hxx  itkCoxDeBoorBSplineKernelFunctionOrig.hxx  (+1 more)
opencl/n4Cref/: .itkN4BiasFieldCorrectionImageFilterTest.cxx.swp  CMakeLists.txt  itkN4BiasFieldCorrectionImageFilterOrig.h  itkN4BiasFieldCorrectionImageFilterOrig.hxx  itkN4BiasFieldCorrectionImageFilterTest.cxx
prototyping/: main.cpp
(+90 files in other folders)
